Show more detailed error info of navigation preload in DevTools Network tab

See https://crbug.com/710738 for the screen images.

BUG=710738

Review-Url: https://codereview.chromium.org/2809353002
Cr-Commit-Position: refs/heads/master@{#464599}

Former-commit-id: ec2f0c7a07f26bb15dbf42c94153c370eccdbfe3